nautilus-view: disable open with app for multiple selection

In 3.15.90, selecting two (or more) files and right-click > “Open with another
application” silently fails to open the application-chooser dialog. So what we
want here is hide that menu item when the selection is bigger than 1 item.

https://bugzilla.gnome.org/show_bug.cgi?id=745898

Signed-off-by: acgtyrant <acgtyrant@gmail.com>